--- a/android-chess-master/app/src/main/assets/help-en.html
+++ b/android-chess-master/app/src/main/assets/help-en.html
@@ -12,7 +12,7 @@
 
 <h3>Help</h3>
 
-<p>Created by <i>Jeroen Carolus</i></p>
+<p>Created by <i>Michael Samuel</i></p>
 
 <p>For support, information about updates and the latest version: please go to the developer website <a href="http://www.michael.nl/">michael.nl</a>.</p>
 
@@ -20,7 +20,7 @@
 
 <p><a href="https://github.com/jcarolus/android-chess">Chess is on GitHub</a> - contribute and make it a better app!</p>
 <p>GitHub contributions:</p>
-<p><i>Paolo Straffi</i>: Italian translation.</p>
+<p><i>Michael Samuel</i>: Indonesian translation.</p>
 
 <h4>Play</h4>
 <p>Play vs. Android or use as a chess board to analyze games.
