--- a/android-chess-master/app/src/main/assets/help_puzzle-en.html
+++ b/android-chess-master/app/src/main/assets/help_puzzle-en.html
@@ -18,7 +18,7 @@ After this first move, the puzzle is solved.<br/>
 Press the 'Show' button for the solution.<br/>
 </p>
 <p>
-Source: <strong>EL ARTE DEL MATE EN DOS</strong> by <i>Eduardo Sadier</i>
+Source: by <i>Agung Purwanto</i>
 </p>
 
 </div>
