--- a/android-chess-master/app/src/main/assets/about-en.html
+++ b/android-chess-master/app/src/main/assets/about-en.html
@@ -34,9 +34,9 @@ td {
 
 <p>For support, information about updates and the latest version: please go to the developer website <a href='http://www.michael.nl/'>michael.nl</a>.</p>
 
-<p>Thanks to <i>Peter van Grijfland</i> for his involvement, excellent suggestions and beta testing.</p>
+<p>Thanks to <i>Agung Purwanto</i> for his involvement, excellent suggestions and beta testing.</p>
 <p>GitHub contributions:</p>
-<p><i>Paolo Straffi</i>: Italian translation.</p>
+<p><i>Michael Samuel</i>: Indonesian translation.</p>
 
 
 	</body>
